      package startup functions, and notifies about incorrect argument
      lists and (incorrect) calls to functions which modify the search
      path or inappropriately generate messages.

      \item \command{R CMD check} now also checks compiled code for
      symbols corresponding to functions which might terminate \R or
      write to \file{stdout}/\file{stderr} instead of the console.
    }
  }

  \subsection{DEPRECATED AND DEFUNCT}{
   \itemize{
      \item \code{require()} no longer has a \code{save} argument.

      \item The \code{gamma} argument to \code{hsv()},
      \code{rainbow()}, and \code{rgb2hsv()} has been removed.

      \item The \option{--no-docs} option for
      \command{R CMD build --binary} is defunct: use
      \option{--install-args} instead.

      \item The option \option{--unsafe} to \command{R CMD INSTALL} is
      defunct: use the identical option \option{--no-lock} instead.

      \item The entry point \code{pythag} formerly in \file{Rmath.h} is
      defunct: use instead the C99 function \code{hypot}.

      \item \command{R CMD build --binary} is formally defunct:
      \command{R CMD INSTALL --build} has long been the preferred
      alternative.

      \item \command{zip.file.extract()} is now defunct: use
      \code{unzip()} or \code{unz()} instead.

      \item \command{R CMD Rd2dvi} without the \option{--pdf} option is
      now deprecated: only PDF output will be supported in future
      releases (since this allows the use of fonts only supported for
      PDF).

      \item A top-level \file{COPYING} file in a package is now
      deprecated (file names \file{LICENSE} or \file{LICENCE} have long
      been preferred), and will not be installed as from \R 2.15.0.

      \item Options such as \code{--max-nsize} and the function
      \code{mem.limits()} are now deprecated: these limits are nowadays
      almost never used, and are reported by \code{gc()} when they are
      in use.
