@@ -19,7 +19,7 @@ Type 'q()' to quit R.
 > ## Regression tests for which the printed output is the issue
 > ### _and_ must work (no Recommended packages, please)
 > 
-> postscript("reg-tests-2.ps", encoding = "ISOLatin1.enc")
+> pdf("reg-tests-2.pdf", encoding = "ISOLatin1.enc")
 > 
 > ## force standard handling for data frames
 > options(stringsAsFactors=TRUE)
