@@ -1,7 +1,7 @@
 ### Regression tests for which the printed output is the issue
 ### May fail, e.g. by needing Recommended packages
 
-postscript("reg-tests-3.ps")
+pdf("reg-tests-3.pdf", encoding = "ISOLatin1.enc")
 
 ## str() for character & factors with NA (levels), and for Surv objects:
 ff <- factor(c(2:1,  NA),  exclude = NULL)
